--- a/html/gallery.html
+++ b/html/gallery.html
@@ -7,10 +7,10 @@
     <meta name="keywords"
           content="random art, javascript, dynamic, grid, layout, flex layouts"/>
     <!--<link rel="icon" href="favicon.ico" type="image/x-icon"/>-->
-    <link rel="stylesheet" type="text/css" href="css/style.css"/>
+    <!--<link rel="stylesheet" type="text/css" href="css/style.css"/>-->
     <script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
     <script type="text/javascript" src="js/freewall.js"></script>
-    <!--<script type="test/javascript" src="js/jquery.lazyload.js"></script>-->
+    <script type="test/javascript" src="js/jquery.lazyload.js"></script>
     <style type="text/css">
         .free-wall {
             margin: 15px;
@@ -20,6 +20,10 @@
             margin: 0;
             display: block;
         }
+    .container img {
+      margin-bottom: 10px;
+    }
+
     </style>
 </head>
 <body>
@@ -32,44 +36,67 @@
         </div>
     </div>
 </div>
-<div id="freewall" class="free-wall"></div>
+
+      <div id="container">
+        <img class="lazy img-responsive" src="images/1.jpg" width="765" height="574" alt="BMW M1 Hood"><br/>
+        <img class="lazy img-responsive" data-original="images/1.jpg" width="765" height="574" alt="BMW M1 Side"><br/>
+        <img class="lazy img-responsive" data-original="images/1.jpg" width="765" height="574" alt="Viper 1"><br/>
+        <img class="lazy img-responsive" data-original="images/1.jpg" width="765" height="574" alt="Viper Corner"><br/>
+        <img class="lazy img-responsive" data-original="images/1.jpg" width="765" height="574" alt="BMW M3 GT"><br/>
+        <img class="lazy img-responsive" data-original="images/1.jpg" width="765" height="574" alt="Corvette Pitstop"><br/>
+      </div>
+
+<div id="freewall" class="free-wall"><img class='lazy' data-original='images/1.jpg' width='300' height='300'></div>
 
 <script type="text/javascript">
 
-    var temp = "<div class='brick' style='width:{width}px;'><img src='images/{index}.jpg' width='100%'></div>";
-    //    var temp = "<div class='brick' style='width:{width}px;'><img class='lazy' data-original='images/{index}.jpg' width='100%'></div>";
+    //    var temp = "<div class='brick' style='width:{width}px;'><img src='images/{index}.jpg' width='100%'></div>";
+    //    var temp = "<div class='brick' style='width:{width}px;'><img class='lazy' data-original='images/{index}.jpg' width='100%' height='300'></div>";
+    var temp = "<div><img class='lazy' data-original='images/{index}.jpg' width='300' height='300'></div>";
 
     var w = 1, h = 1, html = '', limitItem = 98;
     for (var i = 0; i < limitItem; ++i) {
         w = 1 + 3 * Math.random() << 0;
-        html += temp.replace(/\{width\}/g, w * 150).replace("{index}", i + 1);
+//        html += temp.replace(/\{width\}/g, w * 150).replace("{index}", i + 1);
+        html += temp.replace("{index}", i + 1);
+
     }
     $("#freewall").html(html);
 
-    var wall = new freewall("#freewall");
-    wall.reset({
-        selector: '.brick',
-        animate: true,
-        cellW: 150,
-        cellH: 'auto',
-        onResize: function () {
-            wall.fitWidth();
-        }
-    });
-
-    var images = wall.container.find('.brick');
-    images.find('img').load(function () {
-        wall.fitWidth();
-    });
-
-//    $(function () {
-//        $("img.lazy").lazyload({
-//            event: "click",
-//            container: $("#brick")
-//        });
+//    var wall = new freewall("#freewall");
+//    wall.reset({
+//        selector: '.brick',
+//        animate: true,
+//        cellW: 150,
+//        cellH: 'auto',
+//        onResize: function () {
+//            wall.fitWidth();
+//        }
+//    });
+//
+//    var images = wall.container.find('.brick');
+//    images.find('img').load(function () {
+//        wall.fitWidth();
 //    });
 
+    $(function () {
+        $("img.lazy").lazyload({
+//            event: "click",
+//            container: $("#freewall")
+        });
+    });
+
 </script>
+
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script src="jquery.lazyload.js?v=1.9.1"></script>
+  <script src="http://www.appelsiini.net/js/all.js"></script>
+  <script type="text/javascript" charset="utf-8">
+  $(function() {
+     $("img.lazy").lazyload();
+  });
+  </script>
+
 </body>
 </html>
 
